Fix writing alpha bits flag in .tga

We're writing 8-bit alpha (0x8). Krita assumes this value
on reading, but it should still be written correctly,
so that other programs can read it.

BUG:464484

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1728>